Fixed containers Started working on repo add functions (visibility)

--- a/styles/main.less
+++ b/styles/main.less
@@ -36,3 +36,7 @@ html, body {
     pointer-events: none;
   }
 }
+
+.main-container {
+  height: 100%;
+}
